<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/settings_personal">
        <EditTextPreference android:title="@string/username"
                            android:summary="@string/username_desc"
                            android:inputType="textCapSentences"
                            android:defaultValue="@string/username_default"
                            android:key="username_nav_draw"/>
        <ListPreference
            android:defaultValue="@string/lose_weight"
            android:entries="@array/entries_personal_target"
            android:entryValues="@array/entries_personal_target"
            android:key="weight_target"
            android:title="@string/settings_personal_target"
            android:summary="@string/settings_personal_target_desc">
        </ListPreference>
    </PreferenceCategory>
</PreferenceScreen>