<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
            <LinearLayout
                android:padding="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:text="@string/details_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?android:textAppearanceListItem"/>
                <EditText
                    android:id="@+id/fragment_program_exercise_title"
                    android:hint="@string/fragment_program_exercise_title_hint"
                    android:inputType="textAutoComplete|textAutoCorrect|textCapSentences"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/fragment_program_replays_title"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:id="@+id/fragment_program_exercise_replays_count"
                        android:layout_weight="3"
                        android:inputType="numberDecimal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/fragment_program_approach_title"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:id="@+id/fragment_program_exercise_approach_count"
                        android:layout_weight="3"
                        android:inputType="numberDecimal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/fragment_program_weight_title"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:id="@+id/fragment_program_exercise_weight"
                        android:hint="@string/fragment_program_weight_hint"
                        android:layout_weight="3"
                        android:inputType="numberSigned"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/fragment_program_energy_title"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:id="@+id/fragment_program_exercise_energy"
                        android:hint="@string/fragment_program_energy_hint"
                        android:layout_weight="3"
                        android:inputType="numberDecimal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/fragment_program_interval_timer_title"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <Switch
                        android:id="@+id/fragment_program_interval_timer_switch"
                        android:layout_weight="3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:visibility="gone"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/fragment_program_pull_counter_title"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <Switch
                        android:id="@+id/fragment_program_pull_counter_switch"
                        android:layout_weight="3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
</ScrollView>