<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:foreground="?attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/days_list_item_date_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:textSize="20sp"
                tools:text="25 октября 2017, 15:30"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/days_list_item_count_exercises_text_view"/>
                <TextView
                    android:id="@+id/days_list_item_count_exercises_text_view"
                    tools:text="4"
                    android:layout_weight="3"
                    android:padding="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/days_list_item_duration_exercises_text_view"/>
                <TextView
                    android:layout_weight="3"
                    android:id="@+id/days_list_item_duration_exercises_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    tools:text="3 часа 15 минут"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="2dp"
                    android:text="@string/days_list_item_group_exercises_text_view"/>
                <TextView
                    android:layout_weight="3"
                    android:id="@+id/days_list_item_group_exercises_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="2dp"
                    tools:text="Первая программа"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>